<?xml version="1.0"?>
<package>
  <name>mapmover_slam</name>
  <version>0.5.2</version>
  <description>
    The mapmover_slam metapackage that installs mapmover_mapping and related packages.
  </description>

  <!-- One maintainer tag required, multiple allowed, one person per tag --> 
  <maintainer email="elias@eliascerne.com">Elias Cerne</maintainer>


  <!-- One license tag required, multiple allowed, one license per tag -->
  <!-- Commonly used license strings: -->
  <!--   BSD, MIT, Boost Software License, GPLv2, GPLv3, LGPLv2.1, LGPLv3 -->
  <license>BSD</license>


  <!-- Url tags are optional, but mutiple are allowed, one per tag -->
  <!-- Optional attribute type can be: website, bugtracker, or repository -->
  <url type="website">https://eliascerne.com</url>


  <!-- Author tags are optional, mutiple are allowed, one per tag -->
  <!-- Authors do not have to be maintianers, but could be -->
  <author email="elias@eliascerne.com">Elias Cerne</author>


  <!-- The *_depend tags are used to specify dependencies -->
  <!-- Dependencies can be catkin packages or system dependencies -->
  <!-- Examples: -->
  <!-- Use build_depend for packages you need at compile time: -->
  <!--   <build_depend>message_generation</build_depend> -->
  <!-- Use buildtool_depend for build tool packages: -->
  <!--   <buildtool_depend>catkin</buildtool_depend> -->
  <!-- Use run_depend for packages you need at runtime: -->
  <!--   <run_depend>message_runtime</run_depend> -->
  <!-- Use test_depend for packages you need only for testing: -->
  <!--   <test_depend>gtest</test_depend> -->
  <buildtool_depend>catkin</buildtool_depend>
  <run_depend>mapmover_compressed_map_transport</run_depend>
  <run_depend>mapmover_geotiff</run_depend>
  <run_depend>mapmover_geotiff_launch</run_depend>
  <run_depend>mapmover_geotiff_plugins</run_depend>
  <run_depend>mapmover_imu_attitude_to_tf</run_depend>
  <run_depend>mapmover_map_server</run_depend>
  <run_depend>mapmover_map_tools</run_depend>
  <run_depend>mapmover_mapping</run_depend>
  <run_depend>mapmover_marker_drawing</run_depend>
  <run_depend>mapmover_nav_msgs</run_depend>
  <run_depend>mapmover_slam_launch</run_depend>
  <run_depend>mapmover_trajectory_server</run_depend>


  <!-- The export tag contains other, unspecified, tags -->
  <export>
    <!-- You can specify that this package is a metapackage here: -->
    <metapackage/>

    <!-- Other tools can request additional information be placed here -->

  </export>
</package>
