<?xml version="1.0"?>
<package format="2">
  <name>mapmover_slam_launch</name>
  <version>0.5.2</version>
  <description>
    mapmover_slam_launch contains launch files for launching mapmover_slam with different robot systems/setups/postprocessing scenarios.
  </description>

  <!-- One maintainer tag required, multiple allowed, one person per tag --> 
  <maintainer email="elias@eliascerne.com">Elias Cerne</maintainer>


  <!-- One license tag required, multiple allowed, one license per tag -->
  <!-- Commonly used license strings: -->
  <!--   BSD, MIT, Boost Software License, GPLv2, GPLv3, LGPLv2.1, LGPLv3 -->
  <license>BSD</license>


  <!-- Url tags are optional, but mutiple are allowed, one per tag -->
  <!-- Optional attribute type can be: website, bugtracker, or repository -->
  <url type="website">https://eliascerne.com</url>


  <!-- Author tags are optional, mutiple are allowed, one per tag -->
  <!-- Authors do not have to be maintianers, but could be -->
  <author email="elias@eliascerne.com">Elias Cerne</author>


  <buildtool_depend>catkin</buildtool_depend>
  <exec_depend>mapmover_mapping</exec_depend>
  <exec_depend>mapmover_map_server</exec_depend>
  <exec_depend>mapmover_trajectory_server</exec_depend>
  <exec_depend>mapmover_geotiff</exec_depend>
  <exec_depend>mapmover_geotiff_plugins</exec_depend>
  <exec_depend>rviz</exec_depend>
  <exec_depend>tf</exec_depend>
  <exec_depend>topic_tools</exec_depend>

  <!-- The export tag contains other, unspecified, tags -->
  <export>
    <!-- You can specify that this package is a metapackage here: -->
    <!-- <metapackage/> -->

    <!-- Other tools can request additional information be placed here -->

  </export>
</package>
